syntax = "proto3";
package betterfieldmask;

option go_package = "github.com/birdayz/betterfieldmask";

message FieldMask {
  string paths = 1;
}
